# Knowledge_Base

./: .gitignore  pyproject.toml  setup.sh
config/: config.yaml  model.yaml  splitter.yaml  vectordb.yml
data/: Asset_Management_and_Assignment.txt  Assignments & Assessments.txt  Branding.txt  CI_CD_Best_Practices.txt  Check_Azure_Access_KB.txt  Clean_Code_and_Maintainable_Code_Guidelines.txt  Code_Review_Checklist.txt  DevOps_Monitoring_and_Alerting_Guidelines.txt  Disaster_Recovery_and_Business_Continuity_Plan.txt  EmployeeRating.txt  Employee_Onboarding_Process.txt  GST_Knowledge_Base.txt  HR_Policies.txt  IT&Security.txt  IT_Security_Policy.txt  Incident_Management_and_Postmortem_Guidelines.txt  KB+PHI_PII.txt  KB_001_Code_Contribution_Guide.txt.txt  KB_002_Customer_Deescalation_Playbook.txt.txt  KB_003_Lead_Nurturing_Campaign_Guide.txt.txt  KB_004_QBR_Guide_for_Account_Managers.txt.txt  KB_Accessibility.txt  KB_Gender_Diversity.txt  KB_HIPAA.txt  KB_MCP_Dummy_Sales_Data_Generator.txt  Latest agricultural trends.txt  PIP.txt  Payroll_and_Benefits_FAQ.txt  Python language.txt  RS-Bank_KB_Article.txt  Testing_Strategy_at_Learning_Thoughts.txt  Trump tariffs impact on India.txt  Version_Control_Guidelines.txt  Workplace_Safety_Guidelines.txt  article_001_ci_cd_pipeline.txt  article_002_kubernetes_basics.txt  article_003_terraform_intro.txt  article_004_github_actions.txt  article_005_api_design.txt  article_006_monitoring_prometheus.txt  (+75 more)
prompts/: KnowledgeBase.yaml
src/knowledge_base/: __init__.py  logger.py
store/sqlite_db/: record_manager.db
(+10 files in other folders)
